[package]
name = "depth_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = { version = "0.31.0", optional = true }
rstar = "0.12.2"
rtree = "0.1.0"
usvg = { version = "0.23.0", optional = true }
svg = { version = "0.18.0", optional = true }
lyon = { version = "1.0.0", optional = true }

[features]
default = ["geo-integration", "svg-integration"]
geo-integration = ["geo"]
svg-integration = ["usvg", "svg", "lyon"]
